--- a/kitty.conf
+++ b/kitty.conf
@@ -849,7 +849,7 @@ enabled_layouts tall:bias=50;full_size=1;mirrored=false
 
 #: Tab bar {{{
 
-# tab_bar_edge bottom
+tab_bar_edge top
 
 #: Which edge to show the tab bar on, top or bottom
 
@@ -864,7 +864,7 @@ enabled_layouts tall:bias=50;full_size=1;mirrored=false
 #: the second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-# tab_bar_style fade
+tab_bar_style powerline
 
 #: The tab bar style, can be one of:
 
@@ -922,7 +922,7 @@ enabled_layouts tall:bias=50;full_size=1;mirrored=false
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
-# tab_powerline_style angled
+tab_powerline_style slanted
 
 #: The powerline separator style between tabs in the tab bar when
 #: using powerline as the tab_bar_style, can be one of: angled,
@@ -1335,7 +1335,7 @@ enabled_layouts tall:bias=50;full_size=1;mirrored=false
 #: background_opacity. If you want to use both, you are probably
 #: better off just hiding the titlebar with hide_window_decorations.
 
-# macos_option_as_alt no
+macos_option_as_alt yes
 
 #: Use the Option key as an Alt key. With this set to no, kitty will
 #: use the macOS native Option+Key = unicode character behavior. This
@@ -2107,7 +2107,6 @@ map ctrl+alt+enter    launch --cwd=current
 #: }}}
 
 #: }}}
-
 
 # BEGIN_KITTY_THEME
 # Forest Night
